fix problems with week 6
