# controllers/ownerController.js
@@ -31,22 +31,26 @@ exports.getSingleOwner = async (req, res) => {
   });
 };
 
-// // get owner by single pet Id
-// exports.getOwnerByPet = async (req, res) => {
-//   // #swagger.tags = ['Owners']
-//   // #swagger.summary = 'Get a pets owner by pet Id'
-//   // #swagger.description = 'This will return the owner associated with a single pet in the database by pet Id'
-//   const thisPetId = req.params.id;
-//   const result = await mongodb.getDb().db().collection('owners').find({ pets: { $in: [thisPetId] } });
-//   result.toArray().then((owners) => {
-//     if (owners.length > 0) {
-//       res.setHeader('Content-Type', 'application/json');
-//       res.status(200).json(owners);
-//     } else {
-//       res.status(404).json({ error: 'No owners found by that pet Id' });
-//     }
-//   });
-// };
+// get owner by single pet Id
+exports.getOwnerByPet = async (req, res) => {
+  // #swagger.tags = ['Owners']
+  // #swagger.summary = 'Get a pets owner by pet Id'
+  // #swagger.description = 'This will return the owner associated with a single pet in the database by pet Id'
+  const petId = req.params.pets;
+  const result = await mongodb
+    .getDb()
+    .db()
+    .collection('owners')
+    .find({ pets: { petId: petId } });
+  result.toArray().then((owners) => {
+    if (owners.length > 0) {
+      res.setHeader('Content-Type', 'application/json');
+      res.status(200).json(owners);
+    } else {
+      res.status(404).json({ error: 'No owners found by that pet Id' });
+    }
+  });
+};
 
 /* POST REQUESTS */
 // create an owner
@@ -69,7 +73,10 @@ exports.createOwner = async (req, res) => {
           city: "Some City",
           state: "UT",
           zip: 84000,
-          pets: ["65c6f5ecd51fdd04775b0a48", "65c6f726d51fdd04775b0a54"]
+          pets: [
+            { petId: "65c6f5ecd51fdd04775b0a48" },
+            { petId: "65c6f726d51fdd04775b0a54" }
+          ]
         }
       }
     }
@@ -85,7 +92,7 @@ exports.createOwner = async (req, res) => {
     city: req.body.city,
     state: req.body.state,
     zip: req.body.zip,
-    pets: [req.body.pets]
+    pets: [{ petId: req.body.pets }]
   };
   const response = await mongodb.getDb().db().collection('owners').insertOne(owner);
   if (response.acknowledged) {
@@ -116,7 +123,9 @@ exports.updateOwner = async (req, res) => {
           city: "Some City",
           state: "UT",
           zip: 84000,
-          pets: ["65c6f5ecd51fdd04775b0a48", "65c6f726d51fdd04775b0a54"]
+          pets: [
+            { petId: "65c6f5ecd51fdd04775b0a48" }, { petId: "65c6f726d51fdd04775b0a54" }
+          ]
         }
       }
     }
@@ -133,7 +142,7 @@ exports.updateOwner = async (req, res) => {
     city: req.body.city,
     state: req.body.state,
     zip: req.body.zip,
-    pets: [req.body.pets]
+    pets: [{ petId: req.body.pets }]
   };
   const response = await mongodb
     .getDb()
